CR2 : refacto pom, model and DAO